--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
 /* Use the comments below to complete activities 1 through 6. */
 
 /* 1. Use the space below to change the background color of the page using the body tag */
-
-
+body{
+	background-color: pink;
+}
 
 
 
 /* 2a. Change the size of your image to 200px height and width*/
 /* 2b. Give image1 a border */
 #image1 {
-    width: 50px;
-    height: 50px;
+    width: 200px;
+    height: 200px;
 }
 
 /* 3. Size image2 to make it twice as large as image1 */
 #image2 {
-	width: 50%;
-	height: 50%;
+	width: 400%;
+	height: 400%;
 }
 
 /* 4. Change the buttons with class buttonStyle to be blue with white text */
@@ -27,7 +28,7 @@
 	background-color: #F8F094;
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	font-weight: bold;
-	color: #663300;
+	color: blue
 	width: 75px;
 }
 
