--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
 #image1 {
     width: 200px;
     height: 200px;
+    border:15px;
 }
 
 /* 3. Size image2 to make it twice as large as image1 */
@@ -22,18 +23,23 @@ body{
 
 /* 4. Change the buttons with class buttonStyle to be blue with white text */
 .buttonStyle {
-	border-radius: 4px;
-	border: thin solid #F0E020;
-	padding: 5px;
-	background-color: #F8F094;
+	border-radius: 50px;
+	border: dashed ##E55C7F;
+	padding: 10px;
+	background-color: #ffff00;
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	font-weight: bold;
-	color: blue
+	color: white
 	width: 75px;
 }
 
 /* 5. Use the space below to make all h2 tags your favorite color. */
-
+#three{
+	color:#42dff4;
+}
+#four{
+	color:#42f45c;
+}
 
 
 
